<resources>
    <string name="app_name">Spin\'it!</string>
    <string name="defi">Défi : </string>
    <string name="launch_msg">Tirer au sort !</string>
    <string name="favoris">Favoris</string>
    <string name="prefixe">Choix</string>
    <string name="listeInfo">Liste des possibilités</string>
    <string name="actions">Actions</string>
    <string name="participants">Participants</string>
    <string name="passerAnimation">Sauter l\'animation</string>
    <string name="celuiQui">Voici la personne qui va devoir</string>
</resources>
