<?xml version="1.0" encoding="utf-8"?>
<!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".controller.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start">
                <ImageButton
                    android:id="@+id/btnReturn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@color/transparent"
                    android:contentDescription="@string/app_name"
                    android:foreground="@drawable/ic_arrow"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end">
                <ImageButton
                    android:id="@+id/btnSave"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/transparent"
                    android:contentDescription="@string/app_name"
                    android:foreground="@drawable/ic_save"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        android:orientation="vertical">

        <ListView
            android:id="@+id/itemList"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:divider="@android:color/transparent"
            android:dividerHeight="5dp"
            android:descendantFocusability="beforeDescendants"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnDelete"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="80dp"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/app_name"
                android:foreground="@drawable/ic_delete" />

            <ImageButton
                android:id="@+id/btnAdd"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="120dp"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/app_name"
                android:foreground="@drawable/ic_add" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layoutAP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp">


            <Button
                android:id="@+id/btnAction"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:text="@string/actions"
                android:textColor="@color/textWhite"
                android:textSize="15sp"
                android:background="@color/colorAccent"/>

            <Button
                android:id="@+id/btnParticipant"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:text="@string/participants"
                android:textColor="@color/textWhiteTransparent"
                android:textSize="15sp"
                android:background="@color/colorAccentTransparent"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
