<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".controller.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorAccent">

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary">

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/btnReturn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="-5dp"
                android:layout_marginTop="15dp"
                android:background="@color/transparent"
                android:contentDescription="@string/app_name"
                android:foreground="@drawable/ic_arrow" />

            <TextView
                android:id="@+id/textCeluiQui"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:textColor="@color/textWhite"
                android:textSize="20sp"
                android:text="@string/celuiQui"
                android:layout_marginStart="20dp"
                android:layout_gravity="bottom"
                android:shadowColor="@color/textBlack"
                android:shadowDy="10"
                android:shadowDx="10"
                android:shadowRadius="10"/>
        </LinearLayout>


        <TextView
            android:id="@+id/textAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textColor="@color/textWhite"
            android:textSize="22sp"
            android:text="@string/celuiQui"
            android:shadowColor="@color/textBlack"
            android:shadowDy="10"
            android:shadowDx="10"
            android:shadowRadius="10"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

    </LinearLayout>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/slot_back"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center"/>

    <!-- Elements -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">


        <TextView
            android:id="@+id/text_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/textBlack"
            android:textSize="35sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text=""
            android:layout_gravity="center"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/text_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/textBlack"
            android:textSize="36sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingVertical="20dp"
            android:text=""
            android:layout_gravity="center"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/text_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/textBlack"
            android:textSize="35sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text=""
            android:layout_gravity="center"
            android:singleLine="true"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/slot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/slot"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/slot_gradient"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passerAnimation"
            android:textSize="20sp"
            android:textColor="@color/textWhite"
            android:textStyle="italic|bold"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:layout_gravity="center"
            android:shadowColor="@color/textBlack"
            android:shadowDy="10"
            android:shadowDx="10"
            android:shadowRadius="10"
            android:textAllCaps="true"/>

        <ImageButton
            android:id="@+id/btnPasser"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:foreground="@drawable/avance_rapide"
            android:background="@color/transparent"
            android:layout_gravity="center" />
    </LinearLayout>



</FrameLayout>